add phone of user
