# src/main/java/com/example/webapp/rest/RegisterController.java
@@ -2,14 +2,11 @@ package com.example.webapp.rest;
 
 import com.example.webapp.model.User;
 import com.example.webapp.rest.api.RegisterApi;
-import com.example.webapp.rest.dto.LoginUser200ResponseDto;
-import com.example.webapp.rest.dto.LoginUserRequestDto;
-import com.example.webapp.rest.dto.RegisterUser200ResponseDto;
+import com.example.webapp.rest.dto.CreateOrder200ResponseDto;
 import com.example.webapp.rest.dto.RegisterUserRequestDto;
 import com.example.webapp.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -22,25 +19,28 @@ public class RegisterController implements RegisterApi {
         this.userService = userService;
     }
 
+
+
     @Override
-    public ResponseEntity<RegisterUser200ResponseDto> registerUser(RegisterUserRequestDto registerUserRequestDto) {
+    public ResponseEntity<CreateOrder200ResponseDto> registerUser(RegisterUserRequestDto registerUserRequestDto) {
         String username = registerUserRequestDto.getUsername();
         String password = registerUserRequestDto.getPassword();
         String email = registerUserRequestDto.getEmail();
         String address = registerUserRequestDto.getAddress();
+        String phone = registerUserRequestDto.getPhone();
         String defaultImage = "https://img0.baidu.com/it/u=1849651366,4275781386&fm=253&fmt=auto&app=138&f=JPEG?w=585&h=500";
         System.out.println("Registering user: " + username);
         System.out.println("Password: " + password);
 
         // 调用 UserService 注册用户
-        boolean registered = userService.registerUser(new User(username, password, email, address, defaultImage,0));
+        boolean registered = userService.registerUser(new User(username, password, email, address, defaultImage, phone, 0));
 
         if (registered) {
             // 注册成功，返回成功响应
-            return ResponseEntity.ok(new RegisterUser200ResponseDto().code(1));
+            return ResponseEntity.ok(new CreateOrder200ResponseDto().code(1));
         } else {
             // 用户名已存在，返回失败响应
-            return ResponseEntity.badRequest().body(new RegisterUser200ResponseDto().code(0));
+            return ResponseEntity.badRequest().body(new CreateOrder200ResponseDto().code(0));
         }
     }
 }
